--- a/ecomprj/templates/core/addressmain.html
+++ b/ecomprj/templates/core/addressmain.html
@@ -51,9 +51,18 @@
         <div class="col-md-8">
             <a href="{% url 'core:mainadd_address' %}" class="btn btn-secondary btn-lg active" role="button"
                 aria-pressed="true">Add Address</a>
+           
             <br>
             <br>
         </div>
+        <div class="row justify-content-end">
+            <div class="col-md-8">
+                <a href="{% url 'core:checkout' %}" class="btn btn-secondary btn-lg active" role="button"
+                    aria-pressed="true">checkout</a>
+               
+                <br>
+                <br>
+            </div>
     </div>
 </div>
 
