--- a/ecomprj/templates/core/checkout.html
+++ b/ecomprj/templates/core/checkout.html
@@ -106,7 +106,7 @@
                             <div class="form-group">
                                 <div class="custom-control custom-radio">
                                     <input type="radio" class="custom-control-input" name="payment" id="walletId" value="wallet" onchange="handlePaymentSelection()">
-                                    <label class="custom-control-label" for="walletId">WALLET PAYMENT (Balance : ₹{{ request.user.wallet.balance }})</label>
+                                    <label class="custom-control-label" for="walletId">WALLET PAYMENT </label>
                                 </div>
                             </div>
                             <div class="form-group">
